Patient Portal Site Login Demo/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Flat_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flat Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Svc_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Svc Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>